# Dermal-Diagnostic-Help

./: .gitignore  Dermal_Diagnostic_Help.ipynb  README.md  augment.py  best.pt  main.py  pyproject.toml  sortirovka.py  streamlit.py  yolo_cancer.ipynb  yolo_prediction.py
sql_app/: models.py
